--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,37 @@
+body {
+    margin: 0;
+    padding: 0;
+    background: white;
+    overflow: hidden;
+}
+p {
+    font-size: 13px;
+    line-height: 10px;
+ background:  url(https://66.media.tumblr.com/7110218722867861f84db0345134595e/tumblr_nptm6toUmf1rvfm5no1_500.gif) no-repeat; 
+    background-size: contain;
+    background-position: center;
+    background-attachment: fixed;
 
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: rgba(255, 255, 255, 0) ;
+    font-weight: 900;
+    margin: 0;
+
+}
+footer {
+  position: fixed;
+  top: 0;
+  right: 0;
+  padding: 10px;
+  border-bottom-left-radius: 8px;
+  height: 10px;
+  display: flex;
+  justify-content: center;
+}
+footer a {
+  color: black;
+  text-decoration: none;
+  font-weight: 600;
+  display: flex;
+    align-items: center;
+}
