--- a/css/style.css
+++ b/css/style.css
@@ -1,37 +1,54 @@
+@import url(https://fonts.googleapis.com/css?family=Lato);
+
 body {
-    margin: 0;
-    padding: 0;
-    background: white;
-    overflow: hidden;
-}
-p {
-    font-size: 13px;
-    line-height: 10px;
- background:  url(https://66.media.tumblr.com/7110218722867861f84db0345134595e/tumblr_nptm6toUmf1rvfm5no1_500.gif) no-repeat; 
-    background-size: contain;
-    background-position: center;
-    background-attachment: fixed;
-
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: rgba(255, 255, 255, 0) ;
-    font-weight: 900;
-    margin: 0;
-
-}
-footer {
-  position: fixed;
-  top: 0;
-  right: 0;
-  padding: 10px;
-  border-bottom-left-radius: 8px;
-  height: 10px;
   display: flex;
+  height: 100vh;
   justify-content: center;
+  align-items: center;
+  text-align: center;
+  background: #222;
 }
-footer a {
-  color: black;
-  text-decoration: none;
-  font-weight: 600;
+
+ul {
   display: flex;
-    align-items: center;
+  flex-direction: column;
+  align-items: start;
+  list-style-type: none;
+
+  li {
+    padding: 6px 0;
+
+    a {
+      position: relative;
+      display: block;
+      text-decoration: none;
+      font-family: "Lato";
+      color: #ecf0f1;
+      text-transform: uppercase;
+      padding: 4px 0;
+      transition: 0.5s;
+
+      &::after {
+        position: absolute;
+        content: "";
+        width: 100%;
+        height: 3px;
+        top: 100%;
+        left: 0;
+        background: #3498db;
+        transition: transform 0.5s;
+        transform: scaleX(0);
+        transform-origin: right;
+      }
+
+      &:hover {
+        color: #95a5a6;
+      }
+
+      &:hover::after {
+        transform: scaleX(1);
+        transform-origin: left;
+      }
+    }
+  }
 }
