--- a/css/style.css
+++ b/css/style.css
@@ -4,49 +4,5 @@ body {
   justify-content: center;
   align-items: center;
   text-align: center;
-  background: #222;
-}
-
-ul {
-  display: flex;
-  flex-direction: column;
-  align-items: start;
-  list-style-type: none;
-
-    a1 {
-    padding: 6px 0;
-
-    a2 {
-      position: relative;
-      display: block;
-      text-decoration: none;
-      font-family: "Lato";
-      color: #ecf0f1;
-      text-transform: uppercase;
-      padding: 4px 0;
-      transition: 0.5s;
-
-      &::after {
-        position: absolute;
-        content: "";
-        width: 100%;
-        height: 3px;
-        top: 100%;
-        left: 0;
-        background: #3498db;
-        transition: transform 0.5s;
-        transform: scaleX(0);
-        transform-origin: right;
-      }
-
-      &:hover {
-        color: #95a5a6;
-      }
-
-      &:hover::after {
-        transform: scaleX(1);
-        transform-origin: left;
-      }
-    }
-  }
+  background: #white;
 }
